# EmuMevzuatAgent

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20251229_231927_3eaa6a7a367b_initial_migration.py  20251229_234110_afb5b789e861_update_embedding_dimension_to_4096.py
app/: __init__.py  config.py  database.py  dependencies.py  main.py
app/agent/: __init__.py  config.py  graph.py  state.py
app/agent/nodes/: __init__.py  generate.py  grade.py  retrieve.py  rewrite.py  router.py
app/agent/tools/: __init__.py  chunker.py  embedder.py
app/api/v1/: chat.py  health.py  reg_docs.py  router.py
app/models/: __init__.py  base.py  reg_doc.py  reg_doc_chunk.py  reg_doc_event.py
app/repositories/: __init__.py  base.py  reg_doc.py
app/schemas/: __init__.py  reg_doc.py  reg_doc_chunk.py  reg_doc_event.py
app/services/: __init__.py  reg_doc.py
scraper/: __init__.py  client.py  orchestrator.py  run.py
scraper/parsers/: __init__.py  regulation.py  toc.py
scripts/: embed_documents.py
static/: index.html
